@@ -34,7 +34,7 @@ Texinfo中文示例
 * 第一章（First Chapter）:: 这是此示例文档的第一章
                            (with mixed cjk & latin char title)
 * Second Chapter AE ĄĘ ae ąę::  this is chapter 2. AE ĄĘ ae ąę
-* Index::    Complete index.
+* Index node::    Complete index.
 @end menu
 
 
@@ -63,7 +63,7 @@ This is the second item.
 
 Zażółć gęślą jaźń!
 
-@node Index
+@node Index node
 @unnumbered Index
 
 @printindex cp
