@@ -14,7 +14,7 @@ Texinfo中文示例 -->
 <meta name="distribution" content="global">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="index.html#Top" rel="start" title="Top">
-<link href="Index.html#Index" rel="index" title="Index">
+<link href="Index-node.html#Index-node" rel="index" title="Index node">
 <link href="index.html#SEC_Contents" rel="contents" title="Table of Contents">
 <link href="index.html#Top" rel="up" title="Top">
 <link href="Second-Chapter-AE-AE-ae-ae.html#Second-Chapter-AE-_0104_0118-ae-_0105_0119" rel="next" title="Second Chapter AE ĄĘ ae ąę">
@@ -55,7 +55,7 @@ ul.no-bullet {list-style: none}
 <a name="g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09"></a>
 <div class="header">
 <p>
-Next: <a href="Second-Chapter-AE-AE-ae-ae.html#Second-Chapter-AE-_0104_0118-ae-_0105_0119" accesskey="n" rel="next">Second Chapter AE ĄĘ ae ąę</a>, Previous: <a href="index.html#Top" accesskey="p" rel="previous">Top</a>, Up: <a href="index.html#Top" accesskey="u" rel="up">Top</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Index.html#Index" title="Index" rel="index">Index</a>]</p>
+Next: <a href="Second-Chapter-AE-AE-ae-ae.html#Second-Chapter-AE-_0104_0118-ae-_0105_0119" accesskey="n" rel="next">Second Chapter AE ĄĘ ae ąę</a>, Previous: <a href="index.html#Top" accesskey="p" rel="previous">Top</a>, Up: <a href="index.html#Top" accesskey="u" rel="up">Top</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Index-node.html#Index-node" title="Index" rel="index">Index</a>]</p>
 </div>
 <hr>
 <a name="DiYiZhang_0028First-Chapter_0029"></a>
