@@ -6,15 +6,15 @@ Copyright (C) 2005 Someone.
 Texinfo中文示例 -->
 <!-- Created by texinfo, http://www.gnu.org/software/texinfo/ -->
 <head>
-<title>Sample: Index</title>
+<title>Sample: Index node</title>
 
-<meta name="description" content="Sample: Index">
-<meta name="keywords" content="Sample: Index">
+<meta name="description" content="Sample: Index node">
+<meta name="keywords" content="Sample: Index node">
 <meta name="resource-type" content="document">
 <meta name="distribution" content="global">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="index.html#Top" rel="start" title="Top">
-<link href="#Index" rel="index" title="Index">
+<link href="#Index-node" rel="index" title="Index node">
 <link href="index.html#SEC_Contents" rel="contents" title="Table of Contents">
 <link href="index.html#Top" rel="up" title="Top">
 <link href="Second-Chapter-AE-AE-ae-ae.html#Second-Chapter-AE-_0104_0118-ae-_0105_0119" rel="previous" title="Second Chapter AE ĄĘ ae ąę">
@@ -51,47 +51,47 @@ ul.no-bullet {list-style: none}
 </head>
 
 <body lang="en" bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#800080" alink="#FF0000">
-<a name="Index"></a>
+<a name="Index-node"></a>
 <div class="header">
 <p>
-Previous: <a href="Second-Chapter-AE-AE-ae-ae.html#Second-Chapter-AE-_0104_0118-ae-_0105_0119" accesskey="p" rel="previous">Second Chapter AE ĄĘ ae ąę</a>, Up: <a href="index.html#Top" accesskey="u" rel="up">Top</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="#Index" title="Index" rel="index">Index</a>]</p>
+Previous: <a href="Second-Chapter-AE-AE-ae-ae.html#Second-Chapter-AE-_0104_0118-ae-_0105_0119" accesskey="p" rel="previous">Second Chapter AE ĄĘ ae ąę</a>, Up: <a href="index.html#Top" accesskey="u" rel="up">Top</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="#Index-node" title="Index" rel="index">Index</a>]</p>
 </div>
 <hr>
-<a name="Index-1"></a>
+<a name="Index"></a>
 <h2 class="unnumbered">Index</h2>
 
-<table><tr><th valign="top">Jump to: &nbsp; </th><td><a class="summary-letter" href="#Index_cp_letter-C"><b>C</b></a>
+<table><tr><th valign="top">Jump to: &nbsp; </th><td><a class="summary-letter" href="#Index-node_cp_letter-C"><b>C</b></a>
  &nbsp; 
-<a class="summary-letter" href="#Index_cp_letter-É"><b>É</b></a>
+<a class="summary-letter" href="#Index-node_cp_letter-É"><b>É</b></a>
  &nbsp; 
-<a class="summary-letter" href="#Index_cp_letter-Ą"><b>Ą</b></a>
+<a class="summary-letter" href="#Index-node_cp_letter-Ą"><b>Ą</b></a>
  &nbsp; 
-<a class="summary-letter" href="#Index_cp_letter-另"><b>另</b></a>
+<a class="summary-letter" href="#Index-node_cp_letter-另"><b>另</b></a>
  &nbsp; 
 </td></tr></table>
 <table class="index-cp" border="0">
 <tr><td></td><th align="left">Index Entry</th><td>&nbsp;</td><th align="left"> Section</th></tr>
 <tr><td colspan="4"> <hr></td></tr>
-<tr><th><a name="Index_cp_letter-C">C</a></th><td></td><td></td></tr>
+<tr><th><a name="Index-node_cp_letter-C">C</a></th><td></td><td></td></tr>
 <tr><td></td><td valign="top"><a href="DiYiZhang_0028First-Chapter_0029.html#index-chapter_002c-first">chapter, first</a>:</td><td>&nbsp;</td><td valign="top"><a href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09">第一章（First Chapter）</a></td></tr>
 <tr><td colspan="4"> <hr></td></tr>
-<tr><th><a name="Index_cp_letter-É">É</a></th><td></td><td></td></tr>
+<tr><th><a name="Index-node_cp_letter-É">É</a></th><td></td><td></td></tr>
 <tr><td></td><td valign="top"><a href="DiYiZhang_0028First-Chapter_0029.html#index-e-A">é Â</a>:</td><td>&nbsp;</td><td valign="top"><a href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09">第一章（First Chapter）</a></td></tr>
 <tr><td colspan="4"> <hr></td></tr>
-<tr><th><a name="Index_cp_letter-Ą">Ą</a></th><td></td><td></td></tr>
+<tr><th><a name="Index-node_cp_letter-Ą">Ą</a></th><td></td><td></td></tr>
 <tr><td></td><td valign="top"><a href="DiYiZhang_0028First-Chapter_0029.html#index-AE-ae-ae">ĄĘ ae ąę</a>:</td><td>&nbsp;</td><td valign="top"><a href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09">第一章（First Chapter）</a></td></tr>
 <tr><td colspan="4"> <hr></td></tr>
-<tr><th><a name="Index_cp_letter-另">另</a></th><td></td><td></td></tr>
+<tr><th><a name="Index-node_cp_letter-另">另</a></th><td></td><td></td></tr>
 <tr><td></td><td valign="top"><a href="DiYiZhang_0028First-Chapter_0029.html#index-LingYiGe_002cindex-entry">另一个，index entry</a>:</td><td>&nbsp;</td><td valign="top"><a href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09">第一章（First Chapter）</a></td></tr>
 <tr><td colspan="4"> <hr></td></tr>
 </table>
-<table><tr><th valign="top">Jump to: &nbsp; </th><td><a class="summary-letter" href="#Index_cp_letter-C"><b>C</b></a>
+<table><tr><th valign="top">Jump to: &nbsp; </th><td><a class="summary-letter" href="#Index-node_cp_letter-C"><b>C</b></a>
  &nbsp; 
-<a class="summary-letter" href="#Index_cp_letter-É"><b>É</b></a>
+<a class="summary-letter" href="#Index-node_cp_letter-É"><b>É</b></a>
  &nbsp; 
-<a class="summary-letter" href="#Index_cp_letter-Ą"><b>Ą</b></a>
+<a class="summary-letter" href="#Index-node_cp_letter-Ą"><b>Ą</b></a>
  &nbsp; 
-<a class="summary-letter" href="#Index_cp_letter-另"><b>另</b></a>
+<a class="summary-letter" href="#Index-node_cp_letter-另"><b>另</b></a>
  &nbsp; 
 </td></tr></table>
 
