@@ -14,10 +14,10 @@ Texinfo中文示例 -->
 <meta name="distribution" content="global">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="index.html#Top" rel="start" title="Top">
-<link href="Index.html#Index" rel="index" title="Index">
+<link href="Index-node.html#Index-node" rel="index" title="Index node">
 <link href="index.html#SEC_Contents" rel="contents" title="Table of Contents">
 <link href="index.html#Top" rel="up" title="Top">
-<link href="Index.html#Index" rel="next" title="Index">
+<link href="Index-node.html#Index-node" rel="next" title="Index node">
 <link href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09" rel="previous" title="第一章（First Chapter）">
 <style type="text/css">
 <!--
@@ -55,7 +55,7 @@ ul.no-bullet {list-style: none}
 <a name="Second-Chapter-AE-_0104_0118-ae-_0105_0119"></a>
 <div class="header">
 <p>
-Next: <a href="Index.html#Index" accesskey="n" rel="next">Index</a>, Previous: <a href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09" accesskey="p" rel="previous">第一章（First Chapter）</a>, Up: <a href="index.html#Top" accesskey="u" rel="up">Top</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Index.html#Index" title="Index" rel="index">Index</a>]</p>
+Next: <a href="Index-node.html#Index-node" accesskey="n" rel="next">Index node</a>, Previous: <a href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09" accesskey="p" rel="previous">第一章（First Chapter）</a>, Up: <a href="index.html#Top" accesskey="u" rel="up">Top</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Index-node.html#Index-node" title="Index" rel="index">Index</a>]</p>
 </div>
 <hr>
 <a name="Chapter-2-AE-AE-ae-ae"></a>
