@@ -14,7 +14,7 @@ Texinfo中文示例 -->
 <meta name="distribution" content="global">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="#Top" rel="start" title="Top">
-<link href="Index.html#Index" rel="index" title="Index">
+<link href="Index-node.html#Index-node" rel="index" title="Index node">
 <link href="#SEC_Contents" rel="contents" title="Table of Contents">
 <link href="../dir/index.html" rel="up" title="(dir)">
 <link href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09" rel="next" title="第一章（First Chapter）">
@@ -63,7 +63,7 @@ ul.no-bullet {list-style: none}
 <ul class="no-bullet">
   <li><a name="toc-DiYiZhang_0028First-Chapter_0029" href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09">1 第一章（First Chapter）</a></li>
   <li><a name="toc-Chapter-2-AE-AE-ae-ae" href="Second-Chapter-AE-AE-ae-ae.html#Second-Chapter-AE-_0104_0118-ae-_0105_0119">2 Chapter 2 AE ĄĘ ae ąę</a></li>
-  <li><a name="toc-Index-1" href="Index.html#Index">Index</a></li>
+  <li><a name="toc-Index" href="Index-node.html#Index-node">Index</a></li>
 </ul>
 </div>
 
@@ -71,7 +71,7 @@ ul.no-bullet {list-style: none}
 <a name="Top"></a>
 <div class="header">
 <p>
-Next: <a href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09" accesskey="n" rel="next">第一章（First Chapter）</a>, Up: <a href="../dir/index.html" accesskey="u" rel="up">(dir)</a> &nbsp; [<a href="#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Index.html#Index" title="Index" rel="index">Index</a>]</p>
+Next: <a href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09" accesskey="n" rel="next">第一章（First Chapter）</a>, Up: <a href="../dir/index.html" accesskey="u" rel="up">(dir)</a> &nbsp; [<a href="#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Index-node.html#Index-node" title="Index" rel="index">Index</a>]</p>
 </div>
 <hr>
 <a name="TexinfoZhongWenShiLi"></a>
@@ -89,7 +89,7 @@ Texinfo中文示例
 </td></tr>
 <tr><td align="left" valign="top">&bull; <a href="Second-Chapter-AE-AE-ae-ae.html#Second-Chapter-AE-_0104_0118-ae-_0105_0119" accesskey="2">Second Chapter AE ĄĘ ae ąę</a>:</td><td>&nbsp;&nbsp;</td><td align="left" valign="top">this is chapter 2. AE ĄĘ ae ąę
 </td></tr>
-<tr><td align="left" valign="top">&bull; <a href="Index.html#Index" accesskey="3">Index</a>:</td><td>&nbsp;&nbsp;</td><td align="left" valign="top">Complete index.
+<tr><td align="left" valign="top">&bull; <a href="Index-node.html#Index-node" accesskey="3">Index node</a>:</td><td>&nbsp;&nbsp;</td><td align="left" valign="top">Complete index.
 </td></tr>
 </table>
 
@@ -97,7 +97,7 @@ Texinfo中文示例
 <hr>
 <div class="header">
 <p>
-Next: <a href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09" accesskey="n" rel="next">第一章（First Chapter）</a>, Up: <a href="../dir/index.html" accesskey="u" rel="up">(dir)</a> &nbsp; [<a href="#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Index.html#Index" title="Index" rel="index">Index</a>]</p>
+Next: <a href="DiYiZhang_0028First-Chapter_0029.html#g_t_7b2c_4e00_7ae0_ff08First-Chapter_ff09" accesskey="n" rel="next">第一章（First Chapter）</a>, Up: <a href="../dir/index.html" accesskey="u" rel="up">(dir)</a> &nbsp; [<a href="#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Index-node.html#Index-node" title="Index" rel="index">Index</a>]</p>
 </div>
 
 
