@@ -1,3 +1,9 @@
+2013-02-23  Patrice Dumas  <pertusus@free.fr>
+
+	* tp/t/input_files/sample_utf8.texi: avoid having two nodes differing
+	only in case, for case-sensitve filesystems.
+	Report in http://savannah.gnu.org/bugs/?38380.
+
 2013-02-22  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (@t{@@set @@value}): mention that @set
